12309
That's because you're a non-conformist.

For fun,
{code}
scala> (new A("hi") { }) match { case A(s) => s }
<console>:14: error: constructor cannot be instantiated to expected type;
 found   : A(in object $iw)
 required: A(in object $iw)
       (new A("hi") { }) match { case A(s) => s }
                                      ^

{code}
